# Crewai_demo

./: README.md  pyproject.toml  report.md
src/crewai_demo/: main.py
