[project]
name = "crewai_demo"
version = "0.1.0"
description = "crewai_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
crewai_demo = "crewai_demo.main:run"
run_crew = "crewai_demo.main:run"
train = "crewai_demo.main:train"
replay = "crewai_demo.main:replay"
test = "crewai_demo.main:test"
run_with_trigger = "crewai_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
